<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textVIEW"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">


            <EditText
                android:id="@+id/lastone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:digits="ABCDIFJHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/hint1"
                android:inputType="text"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textSize="25sp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck">

            </EditText>

            <EditText
                android:id="@+id/secondone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint2"
                android:autofillHints="phone"
                android:inputType="number"
                android:maxLength="3"
                android:textAlignment="center"
                android:textSize="25sp">

            </EditText>

            <EditText
                android:id="@+id/firstone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:digits="ABCDIFJHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/hint3"
                android:hintTextColor="#8C9EFF"
                android:inputType="text"
                android:maxLength="2"
                android:textAlignment="center"
                android:textSize="25sp">

            </EditText>


        </LinearLayout>

        <EditText
            android:id="@+id/thelastone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:maxLength="9"
            android:inputType="text"
            android:text="@string/editTEXTlast"
            android:textColor="#8C9EFF"
            android:textColorHint="@color/white"
            android:textSize="20sp">

        </EditText>


    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"
        android:text="@string/button"
        android:textColor="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>